# server.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const bodyParser = require("body-parser");
-const mongodb = require('./data/database');  
-const passport = require('passport'); 
+const mongodb = require('./data/database');
+const passport = require('passport');
 const session = require('express-session');
 const GitHubStrategy = require('passport-github2').Strategy;
 const cors = require('cors');
@@ -14,7 +14,8 @@ const port = process.env.PORT || 3000;
 app
   .use(bodyParser.json())
   .use(session(
-    { secret: 'secret',
+    {
+      secret: 'secret',
       resave: false,
       saveUninitialized: true,
     }))
@@ -24,27 +25,27 @@ app
   .use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader(
-                'Access-Control-Allow-Headers', 
-                'Origin, X-Requested-With, Content-Type, Accept, Z-Key, Authorization'
-              );
+      'Access-Control-Allow-Headers',
+      'Origin, X-Requested-With, Content-Type, Accept, Z-Key, Authorization'
+    );
     res.setHeader(
-      'Access-Control-Allow-Methods', 
+      'Access-Control-Allow-Methods',
       'GET, POST, PUT, PATCH, OPTIONS, DELETE'
     );
     next();
   })
 
   .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH'] }))
-  .use(cors( {origin: '*' }))
+  .use(cors({ origin: '*' }))
 
   .use('/', require('./routes/index.js'));
 
-  passport.use(new GitHubStrategy({
-    clientID: process.env.GITHUB_CLIENT_ID,
-    clientSecret: process.env.GITHUB_CLIENT_SECRET,
-    callbackURL: process.env.CALLBACK_URL
-  },
-  function(accessToken, refreshToken, profile, done) {
+passport.use(new GitHubStrategy({
+  clientID: process.env.GITHUB_CLIENT_ID,
+  clientSecret: process.env.GITHUB_CLIENT_SECRET,
+  callbackURL: process.env.CALLBACK_URL ?? 'http://localhost:3000/auth/github/callback'
+},
+  function (accessToken, refreshToken, profile, done) {
     return done(null, profile);
   }
 ));
@@ -57,10 +58,11 @@ passport.deserializeUser((user, done) => {
   done(null, user);
 });
 
-app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : 'Not logged in')});
+app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : 'Not logged in') });
 
-app.get('/github/callback', passport.authenticate('github',{
-  failureRedirect: '/api-docs', session: false}),
+app.get('auth/github/callback', passport.authenticate('github', {
+  failureRedirect: '/api-docs', session: false
+}),
   (req, res) => {
     req.session.user = req.user;
     res.redirect('/');
@@ -68,11 +70,11 @@ app.get('/github/callback', passport.authenticate('github',{
 
 
 mongodb.initdb((err) => {
-    if (err) {
-      console.log(err);
-    } else {
-      app.listen(port, () => {
-        console.log(`Server is running on port ${port}`);
-      });
-    }
-  });
+  if (err) {
+    console.log(err);
+  } else {
+    app.listen(port, () => {
+      console.log(`Server is running on port ${port}`);
+    });
+  }
+});
