# swagger.json
@@ -11,11 +11,20 @@
     "https"
   ],
   "paths": {
+    "/login" :{
+      "get": {
+        "tags" : ["Oauth Login"],
+        "description" : "",
+        "responses" : {
+          "200" : {
+            "description" : "OK"
+          }
+        }
+      }
+    },
     "/": {
       "get": {
-        "tags": [
-          "Hello World"
-        ],
+        "tags" :["Hello World"],
         "description": "",
         "produces": [
           "application/json"
@@ -27,12 +36,10 @@
         }
       }
     },
-    "/api-docs": {
+    "/api-docs/": {
       "get": {
-        "tags": [
-          "API Docs Documentation"
-        ],
-        "description": "API Docs documentation",
+        "tags" :["API Docs"],
+        "description": "",
         "responses": {
           "default": {
             "description": ""
@@ -42,10 +49,8 @@
     },
     "/chapels/": {
       "get": {
-        "tags": [
-          "Chapels"
-        ],
-        "description": "Get All Chapels",
+        "tags" :["Chapels"],
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -56,10 +61,8 @@
         }
       },
       "post": {
-        "tags": [
-          "Chapels"
-        ],
-        "description": "Post one Chapel",
+        "tags" :["Chapels"],
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -86,6 +89,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -95,10 +101,8 @@
     },
     "/chapels/{id}": {
       "get": {
-        "tags": [
-          "Chapels"
-        ],
-        "description": "Get One Chapel by ID",
+        "tags" :["Chapels"],
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -113,20 +117,12 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "402": {
-            "description": "Chapel not found"
-          },
-          "500": {
-            "description": "Server Error"
           }
         }
       },
       "put": {
-        "tags": [
-          "Chapels"
-        ],
-        "description": "Update Chapel Information",
+        "tags" :["Chapels"],
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -160,8 +156,8 @@
           "204": {
             "description": "No Content"
           },
-          "402": {
-            "description": "Chapel Not Found"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -169,10 +165,8 @@
         }
       },
       "delete": {
-        "tags": [
-          "Chapels"
-        ],
-        "description": "Delete Chapel Item",
+        "tags" :["Chapels"],
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -185,8 +179,8 @@
           "204": {
             "description": "No Content"
           },
-          "402": {
-            "description": "Chapen Not Found"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -196,10 +190,8 @@
     },
     "/prophets/": {
       "get": {
-        "tags": [
-          "Prophets"
-        ],
-        "description": "Get All Prophets",
+        "tags" :["Prophets"],
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -210,10 +202,8 @@
         }
       },
       "post": {
-        "tags": [
-          "Prophets"
-        ],
-        "description": "Post new Prophet",
+        "tags" :["Prophets"],
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -241,6 +231,9 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -249,10 +242,8 @@
     },
     "/prophets/{id}": {
       "get": {
-        "tags": [
-          "Prophets"
-        ],
-        "description": "Get one prophet by Id",
+        "tags" :["Prophets"],
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -267,20 +258,12 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "402": {
-            "description": "Phrophet not found"
-          },
-          "500": {
-            "description": "Server Error"
           }
         }
       },
       "put": {
-        "tags": [
-          "Prophets"
-        ],
-        "description": "Update Prophet Information",
+        "tags" :["Prophets"],
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -314,8 +297,8 @@
           "204": {
             "description": "No Content"
           },
-          "402": {
-            "description": "Prophet not found"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -323,10 +306,8 @@
         }
       },
       "delete": {
-        "tags": [
-          "Prophets"
-        ],
-        "description": "Delete Prohept",
+        "tags" :["Prophets"],
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -339,8 +320,308 @@
           "204": {
             "description": "No Content"
           },
-          "402": {
-            "description": "Prophet not found"
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/temples/": {
+      "get": {
+        "tags" :["Temples"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags" :["Temples"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "NameOfTemple": {
+                  "example": "any"
+                },
+                "CityLocation": {
+                  "example": "any"
+                },
+                "StateRegionTerritory": {
+                  "example": "any"
+                },
+                "Country": {
+                  "example": "any"
+                },
+                "dateOfAnnouncment": {
+                  "example": "any"
+                },
+                "whoDedicated": {
+                  "example": "any"
+                },
+                "DateOfDedication": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/temples/{id}": {
+      "get": {
+        "tags" :["Temples"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "tags" :["Temples"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "NameOfTemple": {
+                  "example": "any"
+                },
+                "CityLocation": {
+                  "example": "any"
+                },
+                "StateRegionTerritory": {
+                  "example": "any"
+                },
+                "Country": {
+                  "example": "any"
+                },
+                "dateOfAnnouncment": {
+                  "example": "any"
+                },
+                "whoDedicated": {
+                  "example": "any"
+                },
+                "DateOfDedication": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags" :["Temples"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/scriptures/": {
+      "get": {
+        "tags" :["Scriptures"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags" :["Scriptures"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "BookOfScripture": {
+                  "example": "any"
+                },
+                "NameOfBook": {
+                  "example": "any"
+                },
+                "Chapter": {
+                  "example": "any"
+                },
+                "Verse": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/scriptures/{id}": {
+      "get": {
+        "tags" :["Scriptures"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "tags" :["Scriptures"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "BookOfScripture": {
+                  "example": "any"
+                },
+                "NameOfBook": {
+                  "example": "any"
+                },
+                "Chapter": {
+                  "example": "any"
+                },
+                "Verse": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags" :["Scriptures"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
